# NSU_labs_OOP_cpp_2nd-year

CSVParser/: CMakeLists.txt  CSVParser.h  CommandParser.cpp  CommandParser.h  TupleUtility.h  main.cpp
CSVParser/CSVTest/: testDataOrders.csv  testDataStudentGrades.csv  testDataWeather.csv
CircularBuffer/: CMakeLists.txt
CircularBuffer/src/: CircularBuffer.cpp  CircularBuffer.h
CircularBuffer/test/: CircularBufferTest.cpp
GameOfLife/: CMakeLists.txt
GameOfLife/src/: Cell.h  ConsoleParser.cpp  ConsoleParser.h  Life.cpp  Life.h  LifeGame.cpp  LifeGame.h  main.cpp
MathematicalExpressionParser (lab0)/: CMakeLists.txt  main.cpp
MyString (lab0)/: CMakeLists.txt  main.cpp
SoundProcessor/: CMakeLists.txt
SoundProcessor/filesForWork/configFiles/: config.txt
SoundProcessor/src/: CommandParser.cpp  CommandParser.h  ConfigParser.cpp  ConfigParser.h  Converters.cpp  Converters.h  SoundProcessor.cpp  SoundProcessor.h  WAV.cpp  WAV.h  main.cpp
